🎐🌒 Checkpoint ./package.json:2222562/5079 ./index.js:4109682/184

--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "your-bot-name",
+  "name": "task-list-completed",
   "version": "1.0.0",
-  "description": "",
+  "description": "Check a pull requests task list is complete",
   "author": "stilliard <andrew@stapps.io>",
   "license": "ISC",
-  "repository": "https://github.com/probot/hello-world.git",
+  "repository": "https://github.com/stilliard/github-task-list-completed.git",
   "scripts": {
     "dev": "nodemon --exec \"npm start\"",
     "start": "probot run ./index.js",
