chore(npm): dev comand now lets us run with debug level logs, via: npm run dev

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "repository": "https://github.com/stilliard/github-task-list-completed.git",
   "scripts": {
-    "dev": "nodemon --exec \"npm start\"",
+    "dev": "nodemon --exec \"LOG_LEVEL=debug npm start\"",
     "start": "probot run ./index.js",
     "test": "jest && standard"
   },
