chore(npm): split dev vs dev-debug npm commands, where dev-debug will show debug level

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "license": "ISC",
   "repository": "https://github.com/stilliard/github-task-list-completed.git",
   "scripts": {
-    "dev": "nodemon --exec \"LOG_LEVEL=debug npm start\"",
+    "dev-debug": "nodemon --exec \"LOG_LEVEL=debug npm start\"",
+    "dev": "nodemon --exec \"npm start\"",
     "start": "probot run ./index.js",
     "test": "jest && standard"
   },
