--- a/app.yml
+++ b/app.yml
@@ -36,7 +36,7 @@ default_events:
 # - project_column
 # - public
  - pull_request
-# - pull_request_review
+ - pull_request_review
  - pull_request_review_comment
 # - push
 # - release
