--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
   },
   "dependencies": {
     "marked": "^4.0.10",
-    "probot": "^9.0.0"
+    "probot": "^12.2.2"
   },
   "devDependencies": {
     "jest": "^27.4.7",
-    "smee-client": "^1.0.1"
+    "smee-client": "1.1"
   },
   "engines": {
     "node": "8.9",
